fix: modify scurve and navigation mobile spacing

--- a/src/app/[lng]/components/Scurve/Scurve.module.scss
+++ b/src/app/[lng]/components/Scurve/Scurve.module.scss
@@ -10,11 +10,12 @@
   flex-direction: row;
   align-items: center;
   background-color: #000;
-  padding: 24px;
+  padding: 8px;
   position: relative;
 
   @include mq(tablet) {
     padding: 48px;
+    padding: 24px;
   }
 }
 
